--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -42,6 +42,9 @@ body {
                 padding-top: 65px;
                 padding-bottom: 62px;
             }
+            .sidebar__logo:hover {
+                cursor: pointer;
+            }
             //Navigation
             .nav__bar {
                 display: flex;
@@ -61,10 +64,8 @@ body {
                         color: #808592;
                     }
                     a:hover {
-
                     }
                     a:active {
-
                     }
                 }
             }
@@ -166,7 +167,6 @@ body {
                             }
                             .input__areas {
                                 padding-top: 4px;
-                                display: flex;
                                 input:hover {
                                     background-color: rgb(247, 242, 242);
                                 }
@@ -282,7 +282,7 @@ body {
                             left: -3px;
                         }
 
-                        form {
+                        .form {
                             margin-top: 3px;
                             margin-left: 217px;
                             input {
@@ -315,6 +315,7 @@ body {
                         }
                         .bank__card__info__code__to__pay__paying:hover {
                             background-color: #7fa103;
+                            cursor: pointer;
                         }
                     }
                 }
@@ -344,7 +345,6 @@ body {
         }
     }
 }
-
 
 // Responsive Design START
 // 720px
@@ -405,7 +405,7 @@ body {
                                         }
                                     }
                                 }
-                            }                           
+                            }
                         }
                     }
                 }
@@ -415,15 +415,12 @@ body {
 }
 // 720 px
 
-
-
 //480px
 @media (max-width: $max-width-media-tablet-621) {
     body {
         .main__container {
             flex-direction: column;
             .sidebar {
-
                 width: 100%;
                 height: 163px;
                 transition: height 0.5s linear;
@@ -431,6 +428,7 @@ body {
                     justify-content: center;
                     padding-left: 0;
                 }
+                
                 .nav__bar {
                     // justify-content: center;
                     align-items: center;
@@ -454,8 +452,8 @@ body {
                 .header {
                     .header__about {
                         padding: 0;
-                    display: flex;
-                    flex-direction: column;
+                        display: flex;
+                        flex-direction: column;
                         .header__about__title {
                             width: 100%;
                             h1 {
@@ -474,7 +472,6 @@ body {
     }
 }
 
-
 @media (max-width: $max-width-media-tablet-386) {
     body {
         .main__container {
@@ -488,7 +485,6 @@ body {
         }
     }
 }
-
 
 @media (max-width: $max-width-media-tablet-340) {
     body {
@@ -531,6 +527,5 @@ body {
         }
     }
 }
-
 
 //Responsive design END
